Changes: - Code optimization - Fixed bugs