@@ -11,7 +11,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -39,7 +38,8 @@ public class LanguageServiceImpl implements LanguageService {
     public List<LanguageDTO> findAllLanguages() {
         return languageRepository.findAll()
                 .stream()
+                .sorted()
                 .map(transformer::languageToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
